tests/compile-fail/validity/invalid_bool_uninit.stderr
error: Undefined Behavior: type validation failed: encountered uninitialized bytes, but expected a boolean
 --> $DIR/invalid_bool_uninit.rs:9:23
  |
9 |     let _b = unsafe { MyUninit { init: () }.uninit }; //~ ERROR encountered uninitialized bytes, but expected a boolean
  |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ type validation failed: encountered uninitialized bytes, but expected a boolean
  |
  = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
  = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
          
  = note: inside `main` at $DIR/invalid_bool_uninit.rs:9:23

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

